Fix small bugs on mobile

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -350,12 +350,11 @@ header.hero>h1 {
     text-shadow: -2px -2px 2px rgba(0,0,0,0.2);
 }
 
-@media (max-width:800px) {
+@media (max-width: 800px) {
     header.hero>h1 {
         font-size: 4rem;
         letter-spacing: 0.15rem;
         line-height: 5rem;
-        padding-bottom: 3rem;
     }
 }
 /*-------------------------------------*/
@@ -712,6 +711,13 @@ img.round {
 .betta_image.slideshow .selectors span:hover {
     cursor: pointer;
 }
+
+@media(max-width: 800px) {
+    .betta_image.slideshow {
+        display: none;
+    }
+}
+
 /*-------------------------------------*/
 
 /*---------------------------------------
@@ -1517,12 +1523,13 @@ a.card-double:hover h4 {
 /*---------------------------------------
 	Link Card Double
 ---------------------------------------*/
+
 a.card-double {
 	display: block;
     width: 55rem;
     height: 27.5rem;
 	padding: 0;
-	margin-top: 1rem;
+	margin-top: 3rem;
 	border-color: $color-secondary;
     border-radius: 0.25rem;
     box-shadow: $shadow-level-2;
@@ -1571,6 +1578,12 @@ a.card-double:active
 {
 	background: $color-active;
     box-shadow: $shadow-level-0;
+}
+
+@media(max-width: 800px) {
+    a.card-double {
+        margin-top: 2rem;
+    }
 }
 /*-------------------------------------*/
 
